# artery

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  cspell.json
scenarios/capi/: CMakeLists.txt  omnetpp.ini  services.xml
scenarios/capi/attacks/: CMakeLists.txt  README.md  package.ned
scenarios/capi/attacks/flooding/: Flooding.h  Flooding.ned  services.xml
scenarios/capi/attacks/masquerade/: Masquerade.cc  Masquerade.h  Masquerade.ned  services.xml
scenarios/capi/attacks/replay/: Replay.cc  Replay.h  Replay.ned  services.xml
scenarios/capi/attacks/spamming/: Spamming.h  Spamming.ned  services.xml
scenarios/capi/attacks/vis/: directories.py  plot.py  visual_options.py
scenarios/capi/flooding/: Flooding.cc  Flooding.ned  services.xml
scenarios/capi/masquerade/: Masquerade.h  Masquerade.ned  services.xml
scenarios/capi/replay/: Replay.ned  services.xml
scenarios/capi/spamming/: Spamming.cc  Spamming.ned  services.xml
scenarios/realistic_town06_cosim/: ArteryManager.cc  ArteryManager.h  CMakeLists.txt  TransfusionMsg.proto  TransfusionService.cc  TransfusionService.ned  omnetpp.ini  realistic_town06_cosim.net.xml.save  services.xml
scenarios/realistic_town06_cosim/Memory_BIN/: received_message_carla0.proto  received_message_carla1.proto  received_message_carla2.proto
scenarios/realistic_town06_cosim/Messages_JSON/: received_message_carla2.json
scenarios/realistic_town06_cosim/Protobufs_structure/: Artery_message_structure.proto  Artery_message_structure_pb2.py  OpenCDA_message_structure.proto
scenarios/realistic_town06_cosim/Simulators_messages/: Artery_message.json  OpenCDA_message.json
scenarios/realistic_town06_cosim/messages/: artery.proto  opencda.proto
scenarios/realistic_town06_cosim/store/: store.txt
scenarios_2/realistic_town06_cosim/: CMakeLists.txt  Communication_Manager.py  General-#0.sca  General.anf
scenarios_2/realistic_town06_cosim/Messages_JSON/: received_message_carla0.json  received_message_carla1.json
scenarios_2/realistic_town06_cosim/Protobufs_structure/: Artery_message_structure.proto  OpenCDA_message_structure_pb2.py
scenarios_2/realistic_town06_cosim/Simulators_messages/: Artery_message.proto  OpenCDA_message.proto
scenarios_2/realistic_town06_cosim/results/: General-#0.sca  General-#0.vci
src/artery/sionna/: CMakeLists.txt  README.md  requirements.txt
src/artery/sionna/bridge/: Bindings.h  Capabilities.h  Casters.h  Compat.cc  Compat.h  Constants.h  Defaulted.h  Fwd.h  Helpers.cc  Helpers.h  Layout.cc  Layout.h  Material.cc  Material.h  Meshes.h  Scene.h  SceneObject.h  SionnaBridge.h
src/artery/sionna/bridge/bindings/: Constants.cc  Constants.h  Material.cc  Material.h  Modules.h  Scene.cc  Scene.h  SceneObject.cc  SceneObject.h
src/artery/sionna/bridge/meshes/: Cube.cc  Meshes.h  Polyhedron.cc  Prism.cc  Sphere.cc
src/artery/sionna/cmake/: DiscoverCompileOptions.cmake  FindDrJit.cmake  FindMitsuba.cmake  FindNanobind.cmake  collect-dist-path.py
src/artery/sionna/environment/: Compat.h  Ground.cc  Ground.h  Material.cc  Material.h  MaterialRegistry.cc  MaterialRegistry.h  MitsubaBBoxShape.h  MitsubaShape.cc  MitsubaShape.h  PhysicalEnvironment.cc  PhysicalEnvironment.h  PhysicalEnvironment.ned  PhysicalObject.cc  PhysicalObject.h
src/artery/sionna/environment/providers/: DynamicSceneConfigProvider.ned  SceneConfigProvider.h  SceneConfigProvider.ned
src/artery/sionna/tests/: ArchFlagsUnix.cc  CMakeLists.txt  Main.cc  TestMitsubaLikesShapes.cc  TestStructAlignments.cc  TestTwoWayCast.cc
src/artery/sionna/tests/bridge/: CMakeLists.txt  MitsubaFixture.h  TestBridgeConstants.cc  TestBridgeMaterial.cc  TestBridgeSceneObject.cc  TestCapabilities.cc  TestCompat.cc  TestDefaulted.cc  dummy.py
src/artery/sionna/tests/config/: CMakeLists.txt  test_two_way_cast.cpp
src/cavise/: .clang-format  CAPIManager.cc  CAPIManager.h  CMakeLists.txt  Init.cc  Init.h  package.ned
src/cavise/application/: CosimMessage.msg  CosimService.cc  CosimService.h  CosimService.ned
src/cavise/capi/: CAPI.ned  ConnectionHandler.cc  ConnectionHandler.h  ConnectionHandler.ned  Core.cc  Core.h  Core.ned  Listener.cc  Listener.h
src/cavise/comms/: CommunicationManager.h
src/cavise/messages/: CMakeLists.txt  artery.proto  capi.proto
src/cavise/messages/capi/: ack.proto  artery.proto  capi.proto  entity.proto  opencda.proto
src/cavise/sionna/: CMakeLists.txt  requirements.txt
src/cavise/sionna/bridge/: CMakeLists.txt  Capabilities.h  Casters.h  Compat.h  Defaulted.h  EnvironmentMeshGenerator.h  Fwd.h  Helpers.h  SionnaBridge.h
src/cavise/sionna/bridge/bindings/: AntennaArray.cc  AntennaArray.h  Camera.cc  Camera.h  Constants.cc  Constants.h  Material.cc  Material.h  Modules.h  PathSolver.cc  PathSolver.h  Paths.cc  Paths.h  RadioDevice.cc  RadioDevice.h  Scene.cc  Scene.h  SceneObject.cc  SceneObject.h
src/cavise/sionna/bridge/capabilities/: Calling.h  Core.h  Defaulted.h
src/cavise/sionna/bridge/meshes/: CubeMesh.cc  PolyhedronMesh.cc  PrismMesh.cc  SphereMesh.cc
src/cavise/sionna/cmake/: DiscoverCompileOptions.cmake  DiscoverSitePackagesPath.cmake  FindDrJit.cmake
src/cavise/sionna/environment/: CMakeLists.txt  Compat.h  Ground.cc  Ground.h  Material.cc  Material.h  MaterialRegistry.cc  MaterialRegistry.h  MitsubaShape.cc  MitsubaShape.h  PathLoss.cc  PathLoss.h  PathLoss.ned  PhysicalEnvironment.cc  PhysicalEnvironment.h  PhysicalEnvironment.ned  PhysicalObject.cc  PhysicalObject.h  SionnaScalarAnalogModel.cc  SionnaScalarAnalogModel.h  SionnaScalarAnalogModel.ned  package.ned
src/cavise/sionna/environment/api/: CoordinateTransform.cc  CoordinateTransform.h  DynamicSceneConfig.cc  DynamicSceneConfig.h  IDConverter.cc  IDConverter.h  SionnaAPI.cc  SionnaAPI.h  SionnaAPI.ned
src/cavise/sionna/environment/config/: IConfigProvider.h  ISceneConfigProviders.ned  TraciCoordinateTransformer.cc  (+6 more)
src/cavise/sionna/tests/: CMakeLists.txt  Main.cc  TestMitsubaLikesShapes.cc  TestStructAlignments.cc  TestTwoWayCast.cc
(+206 files in other folders)
